--- a/Resume/Views/Shared/_HeaderProfile.cshtml
+++ b/Resume/Views/Shared/_HeaderProfile.cshtml
@@ -72,11 +72,17 @@
                         </span>
                     </div>
                 </td>
-                <td style="width: 50%; background-color: #4a5257;">
-                    <table style="background-color: #4a5257;">
-                        <thead>
+                <td class="architecture" style="width: 50%; background-color: #4a5257;">
+                    <!-- column 2 -->
+                    <div>
+                        <span class="paragraph-title">Architecture</span>
+                    </div><br />
+                    <table style="background-color: #333;">
+                        <thead style="min-height: 100%;">
                             <tr>
-                                <th colspan="2"><span class="paragraph-title">design principle: SOLID</span></th>
+                                <th colspan="2">
+                                    <p class="text-Highlight">design principle: SOLID</p>
+                                </th>
                             </tr>
                         </thead>
                         <tbody class="display-table">
@@ -90,10 +96,10 @@
                             </tr>
                         </tbody>
                     </table>
-                    <table style="background-color: #4a5257;">
+                    <table style="background-color: #666;">
                         <thead>
                             <tr>
-                                <th colspan="2"><span class="paragraph-title">front-end</span></th>
+                                <th colspan="2"><p class="text-Highlight">front-end</p></th>
                             </tr>
                         </thead>
                         <tbody class="display-table">
@@ -115,10 +121,10 @@
                             </tr>
                         </tbody>
                     </table>
-                    <table style="background-color: #4a5257;">
+                    <table style="background-color: #333;">
                         <thead>
                             <tr>
-                                <th colspan="2"><span class="paragraph-title">back-end</span></th>
+                                <th colspan="2"><p class="text-Highlight">back-end</p></th>
                             </tr>
                         </thead>
                         <tbody class="display-table">
@@ -138,10 +144,10 @@
                             </tr>
                         </tbody>
                     </table>
-                    <table style="background-color: #4a5257;">
+                    <table style="background-color: #666;">
                         <thead>
                             <tr>
-                                <th colspan="2"><span class="paragraph-title">database & frameworks</span></th>
+                                <th colspan="2"><p class="text-Highlight">database</p></th>
                             </tr>
                         </thead>
                         <tbody class="display-table">
@@ -155,10 +161,10 @@
                             </tr>
                         </tbody>
                     </table>
-                    <table style="background-color: #4a5257;">
+                    <table style="background-color: #333;">
                         <thead>
                             <tr>
-                                <th colspan="2"><span class="paragraph-title">separation of concerns</span></th>
+                                <th colspan="2"><p class="text-Highlight">separation of concerns</p></th>
                             </tr>
                         </thead>
                         <tbody class="display-table">
@@ -173,10 +179,10 @@
                             </tr>
                         </tbody>
                     </table>
-                    <table style="background-color: #4a5257;">
+                    <table style="background-color: #666;">
                         <thead>
                             <tr>
-                                <th colspan="2"><span class="paragraph-title">unit testing</span></th>
+                                <th colspan="2"><p class="text-Highlight">unit testing</p></th>
                             </tr>
                         </thead>
                         <tbody class="display-table">
@@ -186,13 +192,14 @@
                             </tr>
                         </tbody>
                     </table>
-                    <table style="background-color: #4a5257;">
+                    <table style="background-color: #333;">
                         <thead>
                             <tr>
-                                <th colspan="2"><span class="paragraph-title">hosting</span></th>
+                                <th colspan="2"><p class="text-Highlight">hosting</p></th>
                             </tr>
                         </thead>
                         <tbody class="display-table">
+                            <tr>
                             <tr>
                                 <td>database</td>
                                 <td>azure sql cloud service</td>
